# icub-main

./: .clang-format  .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  COPYING  CTestConfig.cmake  ChangeLog  ChangeLog.txt  ICUBConfig.cmake  ICUBOptions.cmake  ICUB_ROOT.ini  INSTALL  LICENSE  README  README.md  SECURITY.md  TODO  prova.txt
app/: CMakeLists.txt  ICUB_ROOT.ini  README  app.txt.template  doc.dox  iCubAddApplication.cmake  icubapp.py  ymanager.ini
app/Crawling/: README.txt  doc.dox
app/ShoulderDebugV2/: iCub_Calibration_V1_1_002.xlsm  icubSafeComplete.ini  icubSafeRightArmV2.ini  icubSafeV2.ini  icub_right_arm_safe.ini  robotMotorGui.ini
app/ShoulderDebugV23/: icubRawRightArm.ini
app/actionPrimitivesExample/: CMakeLists.txt
app/actionsRenderingEngine/: CMakeLists.txt
app/armCartesianController/: CMakeLists.txt  app.sh  config.sh  doc.dox  yarp_run.sh
app/artkpsingle/: configFile.ini
app/attentionDistributed/: doc.dox
app/attentionMechanism/: attentionMechanism.ini  doc.dox
app/attention_objects/: config.sh  startAttentionSelection.bat  startAttentionSelection.sh  startCamCalibLeft.bat  startCamCalibLeft.sh  startCamCalibRight.bat  startCamCalibRight.sh  startCamLeft.bat  startCamLeft.sh  startCamRight.bat  startCamRight.sh  startControlGaze.bat  startControlGaze.sh  startControlboardHead.bat  startControlboardHead.sh  startEgoSphere.sh  startFramegrabberGuiLeft.sh  startFramegrabberGuiRight.sh  startGui.bat  startSiftObjectRepresentation.sh
app/boltzmannMachineDemo/: doc.dox
app/cameraCalibration/: CMakeLists.txt  README
app/cartesianSolver/: CMakeLists.txt  doc.dox
app/controlBoardDumper/: CMakeLists.txt  doc.dox
app/crawling/: doc.dox
app/crossPowerSpectrumVergence/: README  doc.dox
app/ctpService/: CMakeLists.txt
app/default/: CMakeLists.txt  README  doc.dox
app/demoAAM/: demoAAM.dox
app/demoAffv2/: README_PLEASE.txt  doc.dox
app/demoForceControl/: CMakeLists.txt  doc.dox
app/demoForceImitation/: CMakeLists.txt
app/demoGrasp/: CMakeLists.txt  doc.dox
app/demoGrasp_IIT_ISR/: CMakeLists.txt  doc.dox
app/demoLogpolarGrabber/: CMakeLists.txt
app/demoReach_IIT_ISR/: doc.dox
app/demoSSSA/: doc.dox
app/demoaff/: doc.dox
app/demoy3/: CMakeLists.txt  armLeft  armLeft1  armLeft2  armLeft3  armLeft4  armLeft5  armLeft6  armLeftWalk  armRight  armRight1  armRight4  armRight5  armRightWalk  armleft.txt  config.ini  crf.txt  demoLeftY4.poshead  demoRightY4.poshead  doc.dox  fullBody.txt  fullBody20.txt  handDOF.txt  handDOFCalibGraspDetector.txt  handDOFMais.txt  handDOFMaisTouchSensors.txt  hannover.txt  head  head1  head2  headBothHands  headWalk  leftLegRemap  leftLegRemap2  leftLegRemap20  legLeftHannover  legs  legs1  legs2  legsBothHands  (+12 more)
app/depth2kin/: CMakeLists.txt  doc.dox
app/disparityMap/: doc.dox
app/drummingEpfl/: README.TXT  doc.dox
app/episodicMemory/: episodicMemory.dox
app/faceExpressions/: CMakeLists.txt  doc.dox
app/faceTrackerDemo/: CMakeLists.txt  doc.dox
app/facetrack_manual/: config.sh  connect.sh  impl_connect.sh  mt_getenv.sh  startCamCalibLeft.sh  startControlGaze.sh  startFaceDetector.sh  startHistogramTracker.sh  startModuleGeneric.sh  viewers.sh
app/fakeRawDataPublisherTester/: CMakeLists.txt  plotRawDataUpperArm.xml
app/fineCalibrationChecker/: CMakeLists.txt
app/fingersTuner/: CMakeLists.txt
app/fingertipsPortScope/: CMakeLists.txt  doc.dox
app/gazeboCartesianControl/: CMakeLists.txt
app/graspDetector/: CMakeLists.txt  left_armGraspDetectorConf.ini
app/headV2/: diffjoint.posnet_h  head.posnet_h  single_joint.posnet_h  single_joint_fast.posnet_h
app/iCubCluster/: CMakeLists.txt
app/iCubGenova01/: CMakeLists.txt  README  cluster-config.sh  doc.dox
app/iCubGenova02/: CMakeLists.txt  doc.dox
app/iCubGui/: CMakeLists.txt  iCubGui.ini  skeleton.ini  skeletonV2.ini  skeletonV3.ini
app/iCubInterfaceGui/: CMakeLists.txt
app/iCubSkinDemo/: CMakeLists.txt  KASPAR_leftarm.ini  KASPAR_leftfoot.ini  KASPAR_lefthand_bottom.ini  KASPAR_lefthand_top.ini  KASPAR_rightarm.ini  KASPAR_rightfoot.ini  KASPAR_righthand_bottom.ini  KASPAR_righthand_top.ini  KASPAR_torso.ini  demohand.ini  hand.ini  left_forearm.ini  leftforearm.ini  leftforearm_lower.ini  leftforearm_upper.ini  lefthand.ini  lefthand_V1_3.ini  lefthandcomp.ini  leftupperarm_lower.ini  leftupperarm_upper.ini  leftupperarm_upper_bottom.ini  leftupperarm_upper_external.ini  leftupperarm_upper_internal.ini  palm.ini  right_arm.ini  rightforearm.ini  rightforearm_lower.ini  rightforearm_upper.ini  righthand.ini  righthand_V1_3.ini  righthandcomp.ini  rightupperarm_lower.ini  rightupperarm_upper_bottom.ini  rightupperarm_upper_external.ini  rightupperarm_upper_internal.ini  skin.ini  skin_lower_forearm.ini  skin_test.ini  skin_upper_forearm.ini  (+2 more)
app/iCubStartup/: CMakeLists.txt  doc.dox
app/iCubTemplateV1_1/: iCub_Calibration_V1_1_001.xlsm  iCub_Calibration_V1_1_002.xlsm  iCub_Calibration_V1_1_003.xlsm  iCub_Calibration_V1_1_005.xls  icub_left_arm_raw.ini  icub_left_arm_safe.ini  icub_right_arm_safe.ini  ~$iCub_Calibration_V1_1_001.xlsm
app/iCubTest/: CMakeLists.txt  test.ini  test_alberto_stiction.ini  test_left_arm.ini  test_right_arm.ini  test_right_leg.ini  test_roie_left_arm.ini  test_stiction_left_arm.ini
app/iKinGazeCtrl/: CMakeLists.txt
app/iKinView/: CMakeLists.txt  iKinArmView.m
app/iha/: 10_run_supporting.sh  20_connect_supporting.sh  30_run_and_connect_iha_processes.sh  70_stop_controller.sh  80_stop_iha_processes.sh  90_stop_supporting.sh  README.txt  config_machines.sh  config_ports.sh  controller.sh  doc.dox  dynamics.sh  facedetector.sh  filewriter.sh  iha_actionsel.sh  iha_datastore.sh  iha_smi.sh  monitor.sh  portaudio.sh  send_action  soundserver.sh  start_stop_utils.sh  viewers.sh
app/ihaNew/: 10_run_supporting.sh  10_run_supporting_wo_gaze.sh  20_connect_supporting.sh  20_connect_supporting_wo_gaze.sh  30_run_and_connect_iha_processes.sh  cameras.sh  (+42 more)
bindings/: CMakeLists.txt  README.md  README.txt  icub.i
src/: CMakeLists.txt  README  omit.txt
(+14801 files in other folders)
